--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,13 +18,28 @@
 @import url('https://fonts.googleapis.com/css?family=Lobster+Two|Montserrat:700|Quicksand');
 @import './base/variables.scss';
 
-.uk-section-secondary {
+.uk-section-secondary, .uk-card-secondary, .uk-search-dark {
   background-color: $recipy-secondary-color;
+}
+
+.uk-background-muted {
+  background-color: $recipy-default-color;
 }
 
 .title {
   color: $recipy-secondary-color;
   font-family: 'Montserrat', sans-serif;
+
+  &.title-light {
+    color: $recipy-default-color;
+  }
+}
+
+.link-light {
+  color: $recipy-default-color;
+  &:hover {
+    color: $recipy-default-color;
+  }
 }
 
 progress.uk-progress[value]::-webkit-progress-value {
