--- a/app/views/cook/home/index.html.erb
+++ b/app/views/cook/home/index.html.erb
@@ -18,40 +18,44 @@
           <span uk-search-icon></span>
           <%= f.input_field "q", label: false, :autofocus => true, :placeholder => "Rechercher un plat...", as: :string %>
         <% end %>
-        <a class="link-light" href="<%= recipe_path(@random_recipe) %>">Trouver une recette aléatoire</a>
-      </div>
-    </div>
-  </div>
-  <div class="uk-section uk-section-default">
-    <div class="uk-container">
-      <h2 class="title">Nos recettes les plus populaires</h2>
-      <div class="uk-grid-small uk-child-width-1-4@l uk-child-width-1-2@m uk-child-width-1-2@s uk-grid-match" uk-grid>
-        <% @recipes.each do |recipe| %>
-          <div>
-            <div class="uk-card uk-card-default">
-              <div class="uk-card-media-top uk-text-center uk-display-block ">
-                <div class="uk-margin-top uk-align-center">
-                  <% if recipe.image.attached? %>
-                    <%= image_tag(recipe.image.variant(resize: '300x400')) %>
-                  <% else %>
-                    <%= image_tag("https://pngimage.net/wp-content/uploads/2018/06/not-found-png-3.png") %>
-                  <% end %>
-                </div>
-              </div>
-              <div class="uk-card-body">
-                <h3 class="uk-card-title">
-                  <%= link_to recipe.title, recipe %>
-                  </br>
-                  <span class="uk-label uk-label-<%= ("success" if recipe.score > 7) || ("warning" if recipe.score > 5) || "danger" %>"><%= recipe.score %>
-                    / 5</span>
-                </h3>
-                <div class="uk-child-width-5-2@s">
-                  <p class="uk-text-truncate"> <%= recipe.description %></p>
-                </div>
-              </div>
-            </div>
-          </div>
+        <% if @random_recipe %>
+          <a class="link-light" href="<%= recipe_path(@random_recipe) %>">Trouver une recette aléatoire</a>
         <% end %>
       </div>
     </div>
   </div>
+  <% if (@recipes.length > 0) %>
+    <div class="uk-section uk-section-default">
+      <div class="uk-container">
+        <h2 class="title">Nos recettes les plus populaires</h2>
+        <div class="uk-grid-small uk-child-width-1-4@l uk-child-width-1-2@m uk-child-width-1-2@s uk-grid-match" uk-grid>
+          <% @recipes.each do |recipe| %>
+            <div>
+              <div class="uk-card uk-card-default">
+                <div class="uk-card-media-top uk-text-center uk-display-block ">
+                  <div class="uk-margin-top uk-align-center">
+                    <% if recipe.image.attached? %>
+                      <%= image_tag(recipe.image.variant(resize: '300x400')) %>
+                    <% else %>
+                      <%= image_tag("https://pngimage.net/wp-content/uploads/2018/06/not-found-png-3.png") %>
+                    <% end %>
+                  </div>
+                </div>
+                <div class="uk-card-body">
+                  <h3 class="uk-card-title">
+                    <%= link_to recipe.title, recipe %>
+                    </br>
+                    <span class="uk-label uk-label-<%= ("success" if recipe.score > 7) || ("warning" if recipe.score > 5) || "danger" %>"><%= recipe.score %>
+                      / 5</span>
+                  </h3>
+                  <div class="uk-child-width-5-2@s">
+                    <p class="uk-text-truncate"> <%= recipe.description %></p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          <% end %>
+        </div>
+      </div>
+    </div>
+  <% end %>
