--- a/app/views/notebooks/new.html.erb
+++ b/app/views/notebooks/new.html.erb
@@ -1,18 +1,31 @@
 <div>
   <br>
-  <%= link_to 'Menu des carnets', notebooks_path, class: "uk-padding-small uk-text-large uk-button uk-button-text"%>
+  <%= link_to 'Menu des carnets', notebooks_path, class: "uk-padding-small uk-text-large uk-button uk-button-text" %>
 </div>
 <div>
-  <div class="uk-card-header uk-card-title uk-text-center"> Création d'un carnet de recettes </div>
-  <div class="uk-child-width-1-2@s uk-child-width-1-3@m" uk-grid="masonry: true" name="gridglobal">
-    <div class="uk-align-center">
-      <div class="uk-card uk-card-default uk-width-1-1@m">
-        <div class="uk-card-body">
-          <%= render 'form', notebook: @notebook %>
+  <div class="uk-background-fixed uk-background-center-center uk-background-cover" style="background-image: url(https://images.unsplash.com/photo-1501618669935-18b6ecb13d6d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1332&q=80);">
+    <div class="uk-card-header uk-card-title uk-text-center"> Création d'un carnet de recettes</div>
+    <div class="uk-child-width-1-2@s uk-child-width-1-3@m" uk-grid="masonry: true" name="gridglobal">
+      <div class="uk-align-center">
+        <div class="uk-card uk-card-default uk-width-1-1@m">
+          <div class="uk-card-body">
+            <%= render 'form', notebook: @notebook %>
+          </div>
         </div>
       </div>
     </div>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
   </div>
-  <br>
 </div>
 
