Feat/navbar notebook (#226)
* fix: image

* feat: build a new recipe

* feat: notebook button in the navbar

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -10,8 +10,9 @@
   <div class="uk-navbar-right">
     <ul class="uk-navbar-nav">
       <% if user_signed_in? %>
+        <li><%= link_to "Carnets", notebooks_path, :class => "uk-navbar-nav" %></li>
         <li>
-          <a><%= current_user.email %><span class="uk-icon" uk-icon="icon: chevron-down; ratio: 2" /></a>
+          <a><%= current_user.email %><span class="uk-icon" uk-icon="icon: chevron-down; ratio: 2"/></a>
           <div class="uk-navbar-dropdown">
             <ul class="uk-nav uk-navbar-dropdown-nav">
               <li>
