--- a/app/views/recipes/show_user_recipes.html.erb
+++ b/app/views/recipes/show_user_recipes.html.erb
@@ -1,6 +1,15 @@
 <p id="notice"><%= notice %></p>
 
-  <h1><%= t("recipe.title.index") %></h1>
+<%# if !user_signed_in? %>
+  <%# Bullet.enable = false %>
+<!--  <div class="uk-position-bottom-center uk-position-relative">-->
+<!--    <div class="uk-text-center">-->
+<!--      <span class="uk-text-lead"><%#= t("recipe.edit.wrong_user_access") %></span>-->
+<!--    </div>-->
+<!--  </div>-->
+<%# else %>
+
+  <h1><%= t("recipe.my_recipes.title") %></h1>
   <% if flash[:success] %>
     <div class="uk-alert-success" uk-alert>
       <a class="uk-alert-close" uk-close></a>
@@ -35,11 +44,17 @@
               <span class="name">Difficulté</span>
               <progress class="uk-progress" value=<%= recipe.difficulty %> max="10"></progress>
             </div>
+            <div class="info-recipe">
+              <span class="name"><%= t("recipe.title.number_views") + " " + recipe.view.to_s %></span>
+            </div>
+            <div class="info-recipe">
+              <span class="name"><%= t("recipe.title.number_feedbacks") + " " + recipe.score_count.to_s %></span>
+            </div>
           </div>
           <div class="uk-card-footer uk-text-center">
             <p class="uk-button uk-button-default"><%= link_to t("recipe.action.show"), recipe %></p>
-            <!--          <p class="uk-button uk-button-default"><%#= link_to t("recipe.action.edit"), edit_recipe_path(recipe) %></p>-->
-            <!--          <p class="uk-button uk-button-default uk-margin-small-top"> <%#= link_to t("recipe.action.destroy"), recipe, method: :delete, data: {confirm: t("recipe.action.confirm")} %></p>-->
+            <p class="uk-button uk-button-default"><%= link_to t("recipe.action.edit"), edit_recipe_path(recipe) %></p>
+            <p class="uk-button uk-button-default uk-margin-small-top"> <%= link_to t("recipe.action.destroy"), recipe, method: :delete, data: {confirm: t("recipe.action.confirm")} %></p>
           </div>
         </div>
       </div>
@@ -47,5 +62,6 @@
   </div>
   </tbody>
 
-<!--<span class="uk-button uk-button-default uk-align-center"><%#= link_to t("recipe.action.new"), new_recipe_path %>-->
-<!--</span>-->
+  <span class="uk-button uk-button-default uk-align-center"><%= link_to t("recipe.action.new"), new_recipe_path %>
+</span>
+<%# end %>
