--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,8 +13,10 @@
  *= require uikit/dist/css/uikit
  *= require main
  *= require landing_pages
+ *= require registrations
  *= require_self
  */
+
 @import url('https://fonts.googleapis.com/css?family=Lobster+Two|Montserrat:700|Quicksand');
 @import './base/variables.scss';
 
