--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -1,4 +1,4 @@
-<div class="uk-position-center">
+<div class="uk-align-center uk-flex uk-flex-center">
   <div class="uk-width-large">
     <h2 class="uk-text-center"><%= t('.resend_confirmation_instructions') %></h2>
 
