--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -2,14 +2,28 @@
   <div class="uk-navbar-left">
 
     <%= link_to unauthenticated_cook_root_path, class: 'uk-navbar-item uk-logo' do %>
-    <% end %>
+      <%= image_tag "landing/logo.png", class: 'uk-img', height: '150', width: '150'%>
+  <% end %>
 
     <ul class="uk-navbar-nav"></ul>
   </div>
 
   <div class="uk-navbar-right">
     <ul class="uk-navbar-nav">
+      <li><%= link_to t('navbar.producer'), unauthenticated_producer_root_path%></li>
+
       <% if user_signed_in? %>
+        <li>
+        <a><%= t('navbar.my_profil') %><span class="uk-icon" uk-icon="icon: chevron-down; ratio: 2"/></a>
+        <div class="uk-navbar-dropdown">
+          <ul class="uk-nav uk-navbar-dropdown-nav">
+            <li><%= link_to t('navbar.my_user_profil'), edit_user_registration_path%></li>
+            <% if current_user.isProducer == true %>
+              <li><%= link_to t('navbar.my_producer_profil'), show_producer_path(current_user.id)%></li>
+            <% end %>
+          </ul>
+        </div>
+        </li>
         <li><%= link_to "Carnets", notebooks_path, :class => "uk-navbar-nav" %></li>
         <li>
           <a><%= current_user.email %><span class="uk-icon" uk-icon="icon: chevron-down; ratio: 2"/></a>
