--- a/app/views/devise/shared/_omniauth.erb
+++ b/app/views/devise/shared/_omniauth.erb
@@ -1,13 +1,14 @@
 <% if devise_mapping.omniauthable? %>
   <div class="uk-margin-small uk-text-center">
-    <%= link_to user_facebook_omniauth_authorize_path, class: 'uk-button uk-button-primary uk-width-1-1 uk-flex uk-flex-middle' do %>
+    <%= link_to user_facebook_omniauth_authorize_path, style: 'background-color:#1C4B95', class: 'uk-button uk-button-primary uk-width-1-1 uk-flex uk-flex-middle' do %>
       <span uk-icon="icon:facebook"></span>
       <div class="uk-margin-auto"><%= t('devise.facebook') %></div>
     <% end %>
   </div>
 
   <div class="uk-margin-small uk-text-center">
-    <%= link_to user_google_oauth2_omniauth_authorize_path, class: 'uk-button uk-button-primary uk-width-1-1 uk-flex uk-flex-middle' do %>
+    <%= link_to user_google_oauth2_omniauth_authorize_path, style: 'background-color:#FFFFFF; color:#484848; border-color: #484848;
+', class: 'uk-button uk-button-primary uk-width-1-1 uk-flex uk-flex-middle' do %>
       <span uk-icon="icon:google-plus"></span>
       <div class="uk-margin-auto"><%= t('devise.google_oauth2') %></div>
     <% end %>
