fix: back path & new seed product (#234)
* fix: back path & new seed product

* fix: image broken

--- a/app/views/point_of_sales/_index.html.erb
+++ b/app/views/point_of_sales/_index.html.erb
@@ -42,6 +42,7 @@
 
 <br>
 <% if current_user && current_user.id == @user.id %>
-  <%= link_to 'New Point Of Sale', new_point_of_sale_path %>
+  <%= link_to 'Nouveau point de vente', new_point_of_sale_path %>
+  <%= link_to 'Nouveau produit', new_product_path %>
 <% end %>
 </div>
