--- a/app/views/point_of_sales/show.html.erb
+++ b/app/views/point_of_sales/show.html.erb
@@ -90,4 +90,4 @@
 
 
 <%= link_to 'Edit', edit_point_of_sale_path(@point_of_sale) %> |
-<%= link_to 'Back', point_of_sales_path %>
+<%= link_to 'Back', show_producer_path %>
