--- a/app/views/producer/home/new.html.erb
+++ b/app/views/producer/home/new.html.erb
@@ -1,5 +1,5 @@
 <div class="uk-cover-container" uk-height-viewport>
-  <img src="<%= asset_path 'confirmation_new/churros.jpeg' %>" alt="cover" uk-cover>
+  <img src="<%= asset_path 'registration/registration-cover2.jpg' %>" alt="cover" uk-cover>
   <div class="uk-position-cover uk-flex uk-flex-center uk-flex-column uk-flex-middle cover-text-container">
 
     <div class="uk-container">
